--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body class="content-section">
+  <body>
     <header class="header">
       <nav class="header_menu">
         <ul class="header_links-list">
           <li class="header_links-list-item">
-            <a>главная</a>
+            главная
           </li>
           <li class="header_links-list-item">
             <a href="#0">посмотреть лоты</a>
@@ -34,7 +34,7 @@
       <div class="address">
         <a class="address_link" href="tel:+99995555555">+9 999 555 5555</a>
         <a class="address_link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p class="address">наб. Принсенграхт 263-265, Амстердам</p>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
       </div>
     </header>
     <main>
@@ -139,7 +139,8 @@
             картина, которую может нарисовать даже ребёнок? Кому нужны все эти
             странные вещи, созданные любителями?
           </p>
-          <br />
+         
+          
           <p>
             Слишком сложные или, наоборот, слишком простые. Опережающие своё
             время. В пух и прах растерзанные критиками. Непринятые и непонятые.
@@ -161,43 +162,34 @@
       <nav class="footer_menu">
         <ul class="footer_menu-list">
           <li class="footer__menu-link_active">
-            <a class="footer_menu-link">главная</a>
+           главная
           </li>
           <li>
-            <a class="footer_menu-link address_link" href="#0"
+            <a class=" address_link" href="#0"
               >посмотреть лоты</a
             >
           </li>
           <li>
-            <a class="footer_menu-link address_link" href="#0">об аукционе</a>
+            <a class=" address_link" href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
       <div class="footer_social-list">
-        <div class="footer_social-link">
-          <a
-            class="footer_social-icon-youtube footer_social-icon"
-            href="#0"
-            target="_blank"
-          >
-          </a>
-        </div>
-        <div class="footer_social-link">
-          <a
-            class="footer_social-icon-vk footer_social-icon"
-            href="#0"
-            target="_blank"
-          >
-          </a>
-        </div>
-        <div class="footer_social-link">
-          <a
-            class="footer_social-icon-pinterest footer_social-icon"
-            href="#0"
-            target="_blank"
-          >
-          </a>
-        </div>
+        <a
+          class="footer_social-icon-youtube footer_social-icon"
+          href="#0"
+          target="_blank">
+        </a>
+        <a
+          class="footer_social-icon-vk footer_social-icon"
+          href="#0"
+          target="_blank">
+        </a>
+        <a
+          class="footer_social-icon-pinterest footer_social-icon"
+          href="#0"
+          target="_blank">
+        </a>
       </div>
     </footer>
   </body>
