--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         />
       </a>
       <div class="address">
-        <a class="address_link" href="tel:+99995555555">+9 999 555 5555</a>
-        <a class="address_link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <a  href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263-265, Амстердам</p>
       </div>
     </header>
@@ -165,12 +165,12 @@
            главная
           </li>
           <li>
-            <a class=" address_link" href="#0"
+            <a  href="#0"
               >посмотреть лоты</a
             >
           </li>
           <li>
-            <a class=" address_link" href="#0">об аукционе</a>
+            <a  href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
