--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <header class="header">
       <nav class="header_menu">
         <ul class="header_links-list">
-          <li class="header_links-list-item">
-            главная
-          </li>
+          <li class="header_links-list-item">главная</li>
           <li class="header_links-list-item">
             <a href="#0">посмотреть лоты</a>
           </li>
@@ -31,44 +29,36 @@
           alt="Логотип проекта"
         />
       </a>
-      <div class="address">
-        <a  href="tel:+99995555555">+9 999 555 5555</a>
+      <address>
+        <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p>наб. Принсенграхт 263-265, Амстердам</p>
-      </div>
+        наб. Принсенграхт 263-265, Амстердам
+      </address>
     </header>
     <main>
       <section class="cover">
         <div class="overlay_cover overlay">
-          <h3 class="cover_title">
-            <span class="aligned-text">
+          <h1 class="cover_title">
+            <div class="aligned-text">
               <span class="no-letter-spacing">он</span>
               <span class="letter-spacing-extended">о</span>
-            </span>
-            <span class="aligned-text aligned-text_center">
+            </div>
+            <span class="aligned-text_center">
               <span class="no-letter-spacing">теб</span>
               <span class="letter-spacing-extended">е</span>
             </span>
-            <span class="aligned-text aligned-text_right">
+            <span class="aligned-text_right">
               <span class="letter-spacing-extended margin-right_corrected"
                 >н</span
               >
               <span class="no-letter-spacing margin-right_corrected">адо</span>
             </span>
-          </h3>
+          </h1>
           <div class="cover_description">
-            <h2 class="cover_description-text">
-              <span>Аукцион</span>
-              <span>вещей,</span>
-              <span>в</span>
-              <span>которые</span>
-              <span>никто</span>
-              <span>не</span>
-              <span>верил</span>
-            </h2>
-            <button class="bet-button">
-              <i class="bet-button_text">Сделать ставку</i>
-            </button>
+            <p class="cover_description-text">
+              Аукцион вещей, в которые никто не верил
+            </p>
+            <button class="bet-button" type="button">Сделать ставку</button>
           </div>
         </div>
       </section>
@@ -77,47 +67,52 @@
         <h2 class="lots_heading">Лоты</h2>
         <ul class="lots_card-list">
           <li class="card_type card_type_film">
-            <div class="card overlay">
-              <h3 class="card_title">
-                Фильм режиссёра, который бросил киношколу
-              </h3>
-              <p>
-                Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-                ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
-              </p>
-            </div>
+            <a class="card_link">
+              <article class="card overlay">
+                <h3 class="card_title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <p>
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+              </article>
+            </a>
           </li>
           <li class="card_type card_type_book">
-            <div class="card overlay">
-              <h3 class="card_title">
-                Книга, где описан один скучный день из жизни рекламного агента
-              </h3>
-              <p>
-                Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
-                переходами на древнеанглийский. В ней одновременно
-                рассказывается о 16 июня 1904 года и об истории литературы,
-                начиная с античных времён. И это всё накладывается на эпическую
-                поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса
-                Джойса?
-              </p>
-            </div>
+            <a class="card_link">
+              <article class="card overlay">
+                <h3 class="card_title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <p>
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </article>
+            </a>
           </li>
           <li class="card_type card_type_picture">
-            <div class="card overlay">
-              <h3 class="card_title">
-                Картина, которую повторит даже 5-летний сын маминой подруги
-              </h3>
-              <p>
-                Ну действительно, там линия, тут кружочек, а здесь и вовсе
-                что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-                котиков… Сколько бы вы на такое поставили, если бы не знали, что
-                это — одна из революционных работ Кандинского?
-              </p>
-            </div>
+            <a class="card_link">
+              <article class="card overlay">
+                <h3 class="card_title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p>
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков… Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
+            </a>
           </li>
         </ul>
-        <br />
-        <br />
         <a class="lots_look-more-link" href="#0">посмотреть больше</a>
       </section>
       <section class="about">
@@ -128,9 +123,7 @@
             alt="Логотип проекта"
           />
         </div>
-        <div class="about_title">
-          <h2 class="about_title">Об аукционе</h2>
-        </div>
+        <h2 class="about_title">Об аукционе</h2>
         <div class="about_text">
           <p>
             Здесь вы не встретите очередное пафосное собрание невероятно
@@ -139,8 +132,7 @@
             картина, которую может нарисовать даже ребёнок? Кому нужны все эти
             странные вещи, созданные любителями?
           </p>
-         
-          
+
           <p>
             Слишком сложные или, наоборот, слишком простые. Опережающие своё
             время. В пух и прах растерзанные критиками. Непринятые и непонятые.
@@ -154,23 +146,19 @@
     </main>
 
     <footer class="footer">
-      <div class="address">
-        <a class="address_link" href="tel:+99995555555">+9 999 555 5555</a>
-        <a class="address_link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p>наб. Принсенграхт 263-265, Амстердам</p>
-      </div>
+      <address>
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        наб. Принсенграхт 263-265, Амстердам
+      </address>
       <nav class="footer_menu">
         <ul class="footer_menu-list">
-          <li class="footer__menu-link_active">
-           главная
+          <li class="footer__menu-link_active">главная</li>
+          <li>
+            <a href="#0">посмотреть лоты</a>
           </li>
           <li>
-            <a  href="#0"
-              >посмотреть лоты</a
-            >
-          </li>
-          <li>
-            <a  href="#0">об аукционе</a>
+            <a href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -178,17 +166,20 @@
         <a
           class="footer_social-icon-youtube footer_social-icon"
           href="#0"
-          target="_blank">
+          target="_blank"
+        >
         </a>
         <a
           class="footer_social-icon-vk footer_social-icon"
           href="#0"
-          target="_blank">
+          target="_blank"
+        >
         </a>
         <a
           class="footer_social-icon-pinterest footer_social-icon"
           href="#0"
-          target="_blank">
+          target="_blank"
+        >
         </a>
       </div>
     </footer>
