--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
       <section class="cover">
         <div class="overlay_cover overlay">
           <h1 class="cover_title">
-            <div class="aligned-text">
+            <span class="aligned-text">
               <span class="no-letter-spacing">он</span>
               <span class="letter-spacing-extended">о</span>
-            </div>
+            </span>
             <span class="aligned-text_center">
               <span class="no-letter-spacing">теб</span>
               <span class="letter-spacing-extended">е</span>
