--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <address>
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        наб. Принсенграхт 263-265, Амстердам
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
     </header>
     <main>
@@ -67,7 +67,7 @@
         <h2 class="lots_heading">Лоты</h2>
         <ul class="lots_card-list">
           <li class="card_type card_type_film">
-            <a class="card_link">
+            <a class="card_link" href="#0">
               <article class="card overlay">
                 <h3 class="card_title">
                   Фильм режиссёра, который бросил киношколу
@@ -81,7 +81,7 @@
             </a>
           </li>
           <li class="card_type card_type_book">
-            <a class="card_link">
+            <a class="card_link" href="#0">
               <article class="card overlay">
                 <h3 class="card_title">
                   Книга, где описан один скучный день из жизни рекламного агента
@@ -98,7 +98,7 @@
             </a>
           </li>
           <li class="card_type card_type_picture">
-            <a class="card_link">
+            <a class="card_link" href="#0">
               <article class="card overlay">
                 <h3 class="card_title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
@@ -149,7 +149,7 @@
       <address>
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        наб. Принсенграхт 263-265, Амстердам
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
       <nav class="footer_menu">
         <ul class="footer_menu-list">
